# gbm_hackathon

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: page.yml  publish.yml  python-app.yml
docs/: Makefile  conf.py  contributing.rst  index.rst  make.bat  usage.rst
docs/usage/: data.rst  models.rst
gbmhackathon/: __init__.py  definitions.py
gbmhackathon/data/: __init__.py  build.py
gbmhackathon/data/io/: __init__.py  data_center.py  data_structure.py  loaders.py  preprocessor_tabular.py
gbmhackathon/data/transforms/: __init__.py
gbmhackathon/stats/: __init__.py  visium_functions.py
gbmhackathon/utils/: visium_functions.py
gbmhackathon/viz/: visium_functions.py
notebooks/: data_loader_demo.ipynb  dataset.py  run_novae.py  visium_starter_mosaic.ipynb
scripts/: run_tiling_extra_he.sh  run_tiling_from_visium_preprocessed_dataset.sh
tests/: __init__.py
